# elclub

./: .gitignore  404.html  BRAND.md  CLAUDE.md  CNAME  ONBOARDING.md  PRD.md  SKILL-BLUEPRINT.md  catalogo.html  contacto.html  explora.html  formacion.html  gracias-pedido.html  gracias.html  index.html  mapa.html  mundial-pdf.html  mundial.html  mystery-box.html  nosotros.html  pedido.html  pedidos.html  personaliza.html  politicas.html  producto.html  robots.txt  sitemap.xml  skills-lock.json  tienda.html
assets/css/: elclub.css
assets/js/: app.js  cart.js  checkout.js
backoffice/: SETUP.md  package.json  wrangler.toml
backoffice/src/: index.js  vault-payment.js  vault.js
content/: leagues.json  products.json
docs/content/: el-club-playbook.md  (+7 more)
erp/: ElClub-ERP.bat  app.py  audit.py  audit_db.py  audit_enrich.py  comercial.py  db.py  local_inpaint.py  publicados.py  requirements.txt  schema.sql  seed.py  seed_admin_web.py  stories.py  vault_orders.py
overhaul/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
overhaul/src-tauri/: Cargo.toml  tauri.conf.json
overhaul/src-tauri/capabilities/: default.json
overhaul/src-tauri/icons/: icon.icns
overhaul/src-tauri/src/: lib.rs  main.rs
overhaul/src-tauri/tests/: imp_r15_cancel_test.rs  imp_r15_create_test.rs  imp_r15_register_arrival_test.rs  imp_r2_create_wishlist_test.rs  imp_r2_mark_in_transit_test.rs  imp_r2_promote_wishlist_test.rs  imp_r4_assign_free_unit_test.rs  imp_r4_close_creates_free_units_test.rs  imp_r4_close_regression_existing_test.rs  imp_r6_settings_test.rs
overhaul/src-tauri/tests/fixtures/: catalog_minimal.json
(+244 files in other folders)
